--- a/M7S1/3-restful-api-to-predict-iris-flower/templates/iris-prediction.html
+++ b/M7S1/3-restful-api-to-predict-iris-flower/templates/iris-prediction.html
@@ -101,8 +101,7 @@
                 </form>
                 {% if result is defined %}
                 <div class="prediction-result w-full max-w-2xl p-6">
-                    <h2 class="text-2xl text-gray-900">Hasil Klasifikasi Bunga Iris</h2>
-                    <img class="my-3" src="static/img/iris-flower.png" alt="iris flower">
+                    <h2 class="text-2xl text-gray-900">Heart Detection Result</h2>
                     <h2 class="mx-auto text-3xl text-center px-2 py-2 bg-gray-300 rounded rounded-full mt-5">{{result}}</h1>
                 </div>
                 {% endif %}
